--- a/public/style/_reset.scss
+++ b/public/style/_reset.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,5 +10,4 @@ body {
 div, form {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
