--- a/public/style/tacdom.scss
+++ b/public/style/tacdom.scss
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  background-color: $dark;
+  background-color: $background;
 
   @include box-shadow(0, 0, 10rem, $shadow, true);
   @include posabs(0, 0, 0, 0);
@@ -31,7 +31,7 @@ body {
   margin: auto;
   padding: 1rem;
 
-  @include box-shadow(0, 0, 1rem, #aaa, true);
+  @include box-shadow(0, 0, 1rem, $faded, true);
   @include posabs(0, 0, 0, 0);
 }
 
@@ -66,7 +66,10 @@ form input {
   font-size: 1.2rem;
   font-weight: inherit;
 
-  @include box-shadow(0, 0, 0.5rem, #aaa, true);
+  @include box-shadow(0, 0, 0.5rem, $faded, true);
+  @include placeholder {
+    color: $faded;
+  }
 }
 
 .frame {
